<resources>
    <string name="app_name">케미</string>
    <string name="action_settings">설정</string>
    <string name="action_search">검색</string>
    <string name="action_archive">보관함</string>
    <string name="action_home">홈</string>
    <string name="action_send">리뷰 작성</string>
    <string name="action_share">공유</string>
    <string name="drawer_open">열림</string>
    <string name="drawer_close">닫힘</string>
    <string name="nav_item_custom_search">맞춤검색</string>
    <string name="nav_item_contents">컨텐츠</string>
    <string name="nav_item_archive">보관함</string>
    <string name="nav_item_reviews">작성한 리뷰 관리</string>
    <string name="nav_item_custom_search_log">지난 맞춤 검색 기록</string>
    <string name="nav_item_analyze_request">제품 분석 요청</string>
    <string name="nav_item_notifications">공지사항</string>
    <string name="nav_item_faq">자주 묻는 질문</string>
    <string name="nav_item_settings">설정</string>
    <string name="nav_item_login">로그인</string>
    <string name="nav_item_logout">로그아웃</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_custom_search</item>
        <item>@string/nav_item_contents</item>
        <item>@string/nav_item_archive</item>
        <item>@string/nav_item_reviews</item>
        <item>@string/nav_item_custom_search_log</item>
        <item>@string/nav_item_analyze_request</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_faq</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_login</item>
    </string-array>
    <string name="fragment_title_main">메인</string>
    <string name="fragment_title_custom_search">맞춤검색</string>
    <string name="fragment_title_contents">컨텐츠</string>
    <string name="fragment_title_archive">보관함</string>
    <string name="fragment_title_reviews">작성한 리뷰 관리</string>
    <string name="fragment_title_custom_search_log">지난 맞춤 검색 기록</string>
    <string name="fragment_title_analyze_request">제품 분석 요청</string>
    <string name="fragment_title_notifications">공지사항</string>
    <string name="fragment_title_faq">자주 묻는 질문</string>
    <string name="fragment_title_settings">설정</string>
    <string name="fragment_title_login">로그인</string>
    <string name="search_hint">상품명, 브랜드명으로 검색하세요</string>
    <string name="search_result">검색 결과</string>
    <string name="title_activity_main">메인</string>
    <string name="title_activity_search">제품 검색</string>
    <string name="title_activity_product_list">제품 목록</string>
    <string name="title_activity_product">제품 상세</string>
    <string name="title_activity_review">리뷰</string>
    <string name="navigation_drawer_open">네비게이션 메뉴 열기</string>
    <string name="navigation_drawer_close">네비게이션 메뉴 닫기</string>
    <string name="show_all_product_button_text">전체보기</string>
    <string name="list_total">전체 %s개</string>
    <string name="list_total_prefix">전체 </string>
    <string name="list_total_suffix">개</string>
    <string name="list_total_default">0</string>
    <string name="product_detail_chemical_list_name">성분</string>
    <string name="product_detail_review_list_name">리뷰</string>
    <string name="product_list_sort_review_total">리뷰 많은 순</string>
    <string name="product_list_sort_review_rating_avg">평점 순</string>
    <string name="product_list_sort_latest_release">최신 출시 순</string>
    <string name="product_popular_list_name">인기 검색어</string>
    <string name="product_latest_list_name">최근 검색어</string>
    <string name="nav_header_user_symptom">%1$s / %2$s / %3$s</string>
    <string name="user_nickname">사용자 닉네임</string>
    <string name="category_title">카테고리</string>
    <string name="category_section1">세탁</string>
    <string name="category_section2">주방</string>
    <string name="category_section3">욕실</string>
    <string name="category_section4">방향 / 청정</string>
    <string name="category_section5">유아 / 아동</string>
    <string name="category_section6">여성</string>
    <string name="category_section7">기타</string>
    <string name="product_list_category_no_exist">카테고리와 일치하는 상품이 존재하지 않습니다</string>
    <string name="product_list_no_exist">검색하신 제품이 없습니다.</string>
    <string name="return_to_search_activity">돌아가기</string>
    <string name="remove_search_word_info_message">검색기록이 삭제되었습니다.</string>
    <string name="empty_latest_search_info">최근 검색어 내역이 없습니다</string>
    <string name="chemical_composition_title">성분 구성</string>
    <string name="chemical_composition_info">성분 정보</string>
    <string name="archive_product_tab_title">제품</string>
    <string name="archive_content_tab_title">컨텐츠</string>
    <string name="archive_product_delete_number">(%s)</string>
    <string name="archive_product_list_delete_text">삭제</string>
    <string name="archive_product_list_complete_text">완료</string>
    <string name="chemical_list_sort_dangerous">위험도 순</string>
    <string name="chemical_list_sort_notation">제품 표기 순</string>
    <string name="chemical_report_subject">성분 정보의 수정을 요청합니다</string>
    <string name="send_report">성분 정보 수정 보고서</string>
    <string name="analyze_request_product_report_subject">제품 분석 요청</string>
    <string name="chemical_report">%1$s 성분에 대한 정보가 부정확하여 수정을 요청합니다.\n일시 : %2$s</string>
    <string name="request_loading_data">데이터를 가져오고 있습니다</string>
    <string name="load_please_wait">잠시만 기다려주세요...</string>
    <string name="list_item_product_review_rating_count">(%s명)</string>
    <string name="chemical_dangerous_grade_format">%s개</string>
    <string name="review_form_string_length_form">%s / 500</string>
    <string name="empty_product_reviews_info">상품의 리뷰가 존재하지 않습니다.</string>
    <string name="chemical_hazard_circle_transition_name">chemical_hazard_circle</string>
    <string name="review_negative_title">아쉬워요</string>
    <string name="review_positive_title">좋아요</string>
    <string name="review_positive_hint">이 제품이 좋은 이유를 다른 사람에게도 알려주세요</string>
    <string name="review_negative_hint">이 제품이 아쉬운 이유를 다른 사람에게도 알려주세요</string>
    <string name="review_card_user_symptom">%1$s / %2$s년생/ %3$s</string>
    <string name="product_brand_name_format">[%1$s]</string>
    <string name="product_rating_value_format">%1$s / 5</string>
    <string-array name="product_list_sort_way">
        <item>@string/product_list_sort_review_total</item>
        <item>@string/product_list_sort_review_rating_avg</item>
        <item>@string/product_list_sort_latest_release</item>
    </string-array>
    <string name="bottom_sheet_menu_camera">카메라</string>
    <string name="bottom_sheet_menu_gallery">갤러리</string>
    <string name="chemi_agreement1">케미 서비스를 이용해 주셔서 감사합니다.\n
        케미는 일상 속 화학제품의 성분을 분석하여 제품의 안정성 정보를 제공하고, 여러분이 직접 리뷰를 남기고 또 다른 사용자의 리뷰를 본 후 원하는 제품을 선택 하실 수 이쏟록 지원하고 있습니다.
        케미는 앞으로도 소비자의 건강을 위한 유용한 콘텐츠와 정보 및 서비스를 제공해드리고자 합니다.\n
        케미를 더 가깝게 느끼실 수 있도록 딱딱하고 어려운 내용이 아닌 쉽고 친숙한 느낌의 이용 약관을 마련하였으니, 시간을 내어 읽어 주시면 여러분과 케미가 더욱 더 가까운 사이가 뒬 수 있을 것이라고 생각합니다.
    </string>
    <string name="chemi_agreement2" formatted="false">
        1. 각종 제조사의 화학제품 주성분을 공신력 있는 기관 및 출처(미국 비영리 단체 EWG, 대한 피부과 의사회,
        식품의약품안전처)를 기반으로 분석한 결과\n
        2. 대상자의 체질과 유해성분제외, 유익성분포함\n
        3. 화학제품 리뷰 작성 및 조회 서비스\n
        4. 화학성분, 건강에 관한 각종 콘텐츠 및 정보\n
        5. 서비스의 운영과 관련한 광고 대행 서비스\n
        6. 기타 케미가 추가 개발하거나 다른 회사와의 제휴계약 등을 통해 제공하는 일체의 서비스\n
        \n
        \n
        (이하 생략)
        \n
        \n
        여러분은 스마트폰의 어플리케이션 스토어에서 케미를 설치하여 위와 같은 서비스를 이용할 수 있습니다.
        그런데 케미의 서비스는 지속적으로 업데이트 될 예정이며,
        더욱 더 여러분과 맞는 화학제품을 고르실 수 있도록 다양한 서비스를 제공할 계획이기 때문에 서비스의 자세한 내용을 약관을 통해 시시각각 알려드릴 수는 없습니다.
        이러한 점을 이해해 주시길 바라며, 추후에 개발될 다양한 서비스는 어플리케이션 스토어, 서비스 내 공지사항을 통해 안내할 예정이오니 언제든지 확인하여 주시기 바랍니다.\n

        본 약관 또는 케미 서비스와 관련하여서는 대한민국의 법률이 적용됩니다.\n
        \n
        \n
        공고일자 : 2016년 12월 16일\n
        시행일자 : 2016년 12월 16일\n
        \n

    </string>
    <string name="chemi_privacy_body">
        저희 케미에게 있어서 여러분의 개인정보를 안전하게 취급하는 일은 가장 중요한 일 중에 하나입니다. 케미가 취급하는
        여러분의 개인정보는 서비스의 원활한 제공을 위하여 여러분이 동의한 목적과 범위 내에서만 이용됩니다. 법령에 의
        하거나 여러분이 별도로 동의하지 않는 한 케미가 여러분의 개인정보를 제3자에게 제공하는 일은 절대로 없으므로
        안심하고 서비스를 사용해 주시면 감사하겠습니다. 개인정보 취급방침에 수정이 있는 경우에는 여러분이 언제든지 그
        내용과 이유를 쉽게 알 수 있도록 공지사항을 통하여 알려 드리겠습니다. 무엇보다도 소중한 여러분의 개인정보는 더 나은
        서비스를 제공하기 위해 활용됩니다. 케미는 서비스의 원활한 제공과 더욱 더 발전된 이용자 경험을 드리기 위해
        필요한 최소한의 개인정보를 수집합니다.
    </string>
    <string-array name="faq_header_list">
        <item>@string/faq_header_1</item>
        <item>@string/faq_header_2</item>
        <item>@string/faq_header_3</item>
        <item>@string/faq_header_4</item>
        <item>@string/faq_header_5</item>
        <item>@string/faq_header_6</item>
        <item>@string/faq_header_7</item>
        <item>@string/faq_header_8</item>
    </string-array>
    <string name="faq_header_1">Q1. 화학 성분 정보의 출처는 어디인가요?</string>
    <string name="faq_header_2">Q2. 제품에 포함된 화학물질 성분의 함량은 알 수 없나요?</string>
    <string name="faq_header_3">Q3. 케미를 통해 제공되는 성분정보를 제품의 종합적 안전성을 판단하는 절대적 기준으로
        활용할 수 있나요?</string>
    <string name="faq_header_4">Q4. 그렇다면 케미를 통해 제공되는 성분정보는 이용자에게 어떤 의미를 가지나요?</string>
    <string name="faq_header_5">Q5. EWG 스킨딥 등급은 무엇인가요?</string>
    <string name="faq_header_6">Q6. 식품의약품안전처 데이터는 무엇인가요?</string>
    <string name="faq_header_7">Q7. 안전보건관리공단 데이터는 무엇인가요?</string>
    <string name="faq_header_8">Q8. 케미의 성분정보는 어떤 과정을 거쳐 등록되나요?</string>
    <string-array name="faq_body_list">
        <item>@string/faq_body_1</item>
        <item>@string/faq_body_2</item>
        <item>@string/faq_body_3</item>
        <item>@string/faq_body_4</item>
        <item>@string/faq_body_5</item>
        <item>@string/faq_body_6</item>
        <item>@string/faq_body_7</item>
        <item>@string/faq_body_8</item>
    </string-array>
    <string name="faq_body_1">
         케미에서 제공되는 화학 성분 정보는 다음의 자료만을 인용합니다.\n
          1) EWG(Enviromental Working Group) : Skin Deep 위험등급\n
          2) 식품의약품안전처 : 알레르기 주의 성분, 기능성 성분\n
          3) 안전보건관리공단: 화학물질의 건강유해성 및 독성 정보
    </string>
    <string name="faq_body_2">
        현행 약사법에 따라 제조사는 해당 화학제품 제조에 사용된 주요 성분을 용기나 포장 및 첨부 문서에 기재해야 합니다.
        하지만 개별 성분의 함량을 표시할 의무는 규정하지 않고 있습니다.\n
        \n
        케미는 주성분 표시제에 따라 공개된 주성분 정보만을 제공하고 있으며, 함량은 각 제조사의 기밀이기 때문에 확인할 수 없는 점,
        케미 이용에 참고하여 주시기 바랍니다.\n
        \n
        제품 화면에서 구성성분이 나열되는 순서는 함량을 고려하지 않은 순서입니다. 기본 설정으로\n
        1)EWG Skin Deep 위험등급에 따른 순서와 2)제품용기 표기에 따른 순서를 제공해 드립니다.\n
        \n

    </string>
    <string name="faq_body_3">
         그렇지 않습니다.\n\n
         그 이유는 다음과 같습니다.\n\n
         1) 케미는 개별 성분의 함량에 관한 정보를 제공하지 않습니다.\n\n
          개별성분의 종합적 유해성은 성분의 실제 함량이 반드시 고려되어야 합니다. 유해물질로 분류된 성분도 함량에 따라 인체에 미치는 결과적 영향이 천차만별로 달라질 수 있습니다. 케미에서 제공되는 정보는 개별성분의 함량에 따른 안전도를 제공되지 않습니다.\n\n
         2) 제품의 용도와 목적에 따라 유해성분이 불가피하게 포함되는 제품도 있습니다.\n\n
          제품의 용도와 목적에 따라 특정 유해성분이 불가피하게 포함될 수 있습니다. 가령 살충제의 경우 살충성분이 반드시 들어가야 하며 소독제의 경우 살균성분이 포함되어야 합니다. 인체에 유해할 수있는 성분이 포함되었다는 사실만으로는 제품의 안전도를 단정할 수 없고 제품의 용도와 성분의 배합목적이 종합적으로 고려되어야 합니다.\n\n
         3) 제품의 사용법에 따라 사용자에게 미치는 유해성의 정도가 달라질 수 있습니다.\n\n
          유해성분이 일체 포함되지 않은 제품도 정해진 용법과 용량을 지켜서 사용하지 않으면 인체에 유해한 결과를 초래할 수 있습니다.\n\n
          반면 유해성분을 포함하고 있는 제품도 정해진 용법과 용량을 지켜 사용한다면 인체에 아무런 영향을 끼치지 않을 수 있습니다.\n\n
          제품의 목적과 사용법 등 많은 변수들이 제품의 실제 인체영향을 결정하기 때문에 케미의 정보만으로 제품의 최종적 안전성을 예측할 수 없습니다.\n\n
    </string>
    <string name="faq_body_4">
        케미는 개별 성분에 대해 지금까지 밝혀진 과학적 자료만을 전달해드립니다.\n\n
        제품에 대한 종합적인 판단은 케미에서 제공하는 성분정보 뿐만 아니라 여러 가지 요소를 종합적으로 고려하여 내려주시길 바랍니다. 케미에서 제공되는 정보는 제품에 대한 판단요소 중 하나로서 활용하시길 권장하며 제품구매 및 사용에 대한 최종적인 결정과 선택은 이용자의 몫임을 알려드립니다.\n\n
        케미는 관련 법과 제도의 범위 안에서 소비자에게 보다 많은 정보를 제공할 수 있도록 끊임없이 노력하겠습니다.\n
        \n
    </string>
    <string name="faq_body_5">
        EWG는 Environment Working Group의 약자로 안전한 성분을 대안으로 제시하는 미국의 비영리 환경시민단체를 뜻합니다. 2억 5000여 개의 연구 조사 결과를 통해 1~10까지 성분안전도 등급을 설정하였습니다.\n\n
        EWG등급은 EWG가 연구한 각 성분의 안전도 등급입니다.\n
        현재 케미의 요약정보에서는 0등급(회색-등급 미정), 1~2등급(초록-낮은 위험), 3~6등급(주황-보통 위험), 7~10등급(빨강-높은위험)을 기준으로 제품 성분의 등급별 비중을 아이콘을 통해 보여드리고있습니다.\n\n
        EWG등급은 각 성분에 대한 안전도를 판단하는 데 있어 가장 중요하고 공신력 있는 척도라고 할 수 있습니다.
    </string>
</resources>