<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/archive_product_list_header_a"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <!--android:paddingTop="20dp"-->
            <!--android:paddingBottom="12dp"-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/archive_product_list_total_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_total_prefix"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/archive_product_list_total"
                    android:text="@string/list_total_default"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/archive_product_list_total_suffix"
                    android:text="@string/list_total_suffix"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/archive_product_list_edit_button_layout"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/archive_product_list_edit_text_view"
                    android:text="편집"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/archive_product_list_header_b"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <!--android:paddingTop="20dp"-->
            <!--android:paddingBottom="12dp"-->
            <LinearLayout
                android:id="@+id/archive_product_list_total_select_layout"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/archive_product_list_total_select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_check_circle_uncheck_24dp"/>

                <TextView
                    android:id="@+id/archive_product_list_total_select_text_view"
                    android:text="전체선택"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/archive_product_list_delete_button_layout"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/archive_product_list_delete_text_view"
                    android:text="@string/archive_product_list_delete_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                </TextView>

                <TextView
                    android:id="@+id/archive_product_list_complete_text_view"
                    android:text="@string/archive_product_list_complete_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/archive_product_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>